examples/test/testpolicy13986.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13986
  namespace: namespace333
spec:
  podSelector:
    matchLabels:
      key10: value40
      key30: value25
      key13: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value17
          key16: value13
          key48: value27
      podSelector:
        matchLabels:
          key20: value12
